# coderunner

./: .gitignore  Cargo.toml  Dockerfile  LICENSE  README.md  flake.nix  go.mod  go.sum  package.json
.github/workflow/: ghcr.yaml
.github/workflows/: docker-image.yml
cmd/comphub/: main.go
internal/comphubTypes/: comphubTypes.go
internal/compilers/: compiler.go
internal/execute/: executeC.go  executeCPP.go  executeGo.go  executeJS.go  executeJava.go
internal/handlers/: handlers.go
internal/routes/: routes.go
internal/utils/: utils.go
src/: config.rs  error.rs  lib.rs  main.rs  routes.rs  utils.rs
src/handlers/: compile.rs  error.rs  health.rs  mod.rs
src/infra/: brainfuck.rs  c.rs  compile.rs  cpp.rs  crystal.rs  d.rs  dart.rs  error.rs  go.rs  groovy.rs  haskell.rs  javascript.rs  julia.rs  kotlin.rs  lua.rs  mod.rs  nix.rs  odin.rs  perl.rs  python.rs  r.rs  ruby.rs  rust.rs  scala.rs  zig.rs
tests/: utils.rs
tests/api/: health.rs
web/: index.html  package.json
web/src/: App.tsx  consts.ts
web/src/components/: Editor.tsx  Navbar.tsx
