[package]
name = "comphub"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = { version = "0.8.4", features = ["macros", "tokio"] }
dotenvy = "0.15.7"
serde = { version = "1.0.219", features = ["derive"] }
thiserror = "2.0.12"
tokio = { version = "1.46.0", features = ["full"] }
tower-http = "0.6.6"
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["env-filter",
    "registry"] }

